--- a/client/meetup.html
+++ b/client/meetup.html
@@ -3,11 +3,25 @@
 </head>
 
 <body>
-  <h1>Welcome to LeadingBoard!</h1>
+  <div class="container">
 
-  {{> hello}}
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <a class="navbar-brand" href="#">Title</a>
+  <ul class="nav navbar-nav">
+    <li class="active">
+      <a href="#">Home</a>
+    </li>
+    <li>
+      <a href="#">Link</a>
+    </li>
+  </ul>
+</nav>
 
-  {{> meets}}
+    <h1>Welcome to LeadingBoard!</h1>
+
+    {{> hello}}
+    {{> meets}}
+  </div>
 </body>
 
 <template name="hello">
