--- a/client/meetup.html
+++ b/client/meetup.html
@@ -1,5 +1,5 @@
 <head>
-  <title>leadingBoard</title>
+  <title>MeetU</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
   </ul>
 </nav>
 
-    <h1>Welcome to LeadingBoard!</h1>
+    <h1>Welcome to MeetU!</h1>
 
     {{> hello}}
     {{> meets}}
