--- a/client/meetup.html
+++ b/client/meetup.html
@@ -5,26 +5,22 @@
 <body>
   <div class="container">
 
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <a class="navbar-brand" href="#">Title</a>
-  <ul class="nav navbar-nav">
-    <li class="active">
-      <a href="#">Home</a>
-    </li>
-    <li>
-      <a href="#">Link</a>
-    </li>
-  </ul>
-</nav>
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <a class="navbar-brand" href="#">Title</a>
+      <ul class="nav navbar-nav">
+        <li class="active">
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">Link</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 
     <h1>Welcome to MeetU!</h1>
 
-    {{> hello}}
     {{> meets}}
-  </div>
+    {{> newMeet}}
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
